--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -2,7 +2,7 @@
   <div class="pull-right">
     <%= link_to 'Nuevo Tipo', new_tipo_path, class: "btn btn-danger btn-md" %>
   </div>
-  <h1>Tipos de Nomina</h1>
+  <h1>Tipos de Nómina</h1>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -36,7 +36,7 @@
   </div>
 <%elsif%>
   <div class="actions">
-    <h4>"No hay tipos de nomina disponibles"</h4>
+    <h4>"No hay tipos de nómina disponibles"</h4>
   </div>
   <%end%>
 </div>
