--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -47,7 +47,7 @@
             <span></a>
           </li>
           <li class="">
-            <a href="#suspendidos" data-toggle="tab" id="suspendido_tab">Suspendidos
+            <a href="#suspendidos" data-toggle="tab" id="suspendidos_tab">Suspendidos
               <span class="badge"><%= @slength %>
                 <span></a>
               </li>
