--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,13 +30,13 @@ body {
   margin: 0 0 0 260px;
   padding: 15px 30px;
   min-height: 600px;
-  background: #F3F3F3;
+  background: #FFFFFF;
 }
 #page-inner {
   width: 100%;
   margin: 70px 20px 10px 0;
   background-color: #fff!important;
-  padding: 10px;
+  padding: 0px;
   min-height: 1200px;
 }
 #posicionmenu {
