--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -2,7 +2,7 @@
 <%if p.length>0%>
 <div class="table-responsive">
 
-  <table class="table table-hover table-bordered table-condensed table-striped">
+  <table class="table table-hover table-bordered table-condensed table-striped" style="font-size:	11px;">
     <thead>
       <tr>
         <th>Cedula</th>
