--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -36,7 +36,7 @@
   <%= will_paginate p, renderer: BootstrapPagination::Rails %>
 </div>
 </div>
-<%elsif%>
+<%else%>
 <div class="actions">
   <h4>"No hay empleados en esta seccion"</h4>
 </div>
