--- a/app/views/personas/_registroconcepto_fields.html.erb
+++ b/app/views/personas/_registroconcepto_fields.html.erb
@@ -31,6 +31,15 @@
         <%= f.text_field :formula,:class => "form-control", REQUIRED:"" %>
       </div>
     </div>
+    <div class="col-sm-4">
+      <%= f.label :formula_patrono %>
+      <div class="form-group input-group">
+        <span class="input-group-addon">
+          <span class="fa fa-calculator"></span>
+        </span>
+        <%= f.text_field :formula_patrono,:class => "form-control", REQUIRED:"" %>
+      </div>
+    </div>
 
   </div>
 
