--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -4,17 +4,17 @@
   </div>
   <h1>Tipos de Nómina</h1>
 </div>
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Lista de Tipos
-  </div>
+
  <%if Tipo.all.length>0%>
-  <div class="panel-body">
-    <div class="table-responsive text-center">
-      <table class="table table-bordered table-condensed table-responsive table-bordered">
-        <thead>
-          <tr>
+ <ul class="list-group">
+   <li class="list-group-item text-muted" contenteditable="false">Busqueda</li>
+   <li class="list-group-item ">
+     <div class="table-responsive">
+
+       <table class="table table-hover table-bordered table-condensed table-striped" style="font-size:	11px;">
+         <thead>
             <th class= "actions">Nombre</th>
+            <th class= "actions" style= "width: 350px;">Reportes</th>
             <th class= "actions" style= "width: 100px;">Acciones</th>
           </tr>
         </thead>
@@ -23,20 +23,40 @@
           <% @tipos.each do |tipo| %>
           <tr>
             <td><%= tipo.nombre %></td>
+            <td>
+              <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+<%= link_to ' Recibos', tipo_path(tipo,format: "pdf")+"?doc=0",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar recibos de pago de la nomina" %>
+<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=1",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
+</div>
+<div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+<%= link_to ' Bancario', "#",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte bancario" %>
+<%= link_to '', "#",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
+</div>
+<div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+<%= link_to ' Conceptos', tipo_path(tipo,format: "pdf")+"?doc=2",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
+<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=3",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
+</div>
+
+            </td>
             <td><div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
 
-          <%= link_to '', tipo,class: "btn btn-default fa fa-eye " %>
-            <%= link_to '', edit_tipo_path(tipo),class: "btn btn-default fa fa-pencil" %>
-            <%= link_to '', tipo,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
+            <%= link_to '', tipo,class: "btn btn-default fa fa-eye ","data-toggle"=>"tooltip", "data-placement"=>"top", "title"=>"Ver mas informacion" %>
+            <%= link_to '', edit_tipo_path(tipo),class: "btn btn-default fa fa-pencil","data-toggle"=>"tooltip", "data-placement"=>"top", "title"=>"Editar" %>
+            <%= link_to '', tipo,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' },"data-toggle"=>"tooltip", "data-placement"=>"top", "title"=>"Eliminar nomina" %></div></td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
-  </div>
-<%elsif%>
+  </li>
+</ul>
+<script type="text/javascript">
+$(function () {
+$('[data-toggle="tooltip"]').tooltip()
+})
+</script>
+<%else%>
   <div class="actions">
     <h4>"No hay tipos de nómina disponibles"</h4>
   </div>
   <%end%>
-</div>
